@@ -89,7 +89,7 @@ public class QuestionController {
         }
 
         questionService.modify(question, questionForm.getSubject(), questionForm.getContent());
-        return String.format("redirect:/question/detail/%s", id);
+        return "redirect:/question/detail/%s".formatted(id);
     }
 
     @PreAuthorize("isAuthenticated()")
@@ -118,5 +118,16 @@ public class QuestionController {
         questionService.delete(question);
 
         return "redirect:/";
+    }
+
+    @PreAuthorize("isAuthenticated()")
+    @GetMapping("/vote/{id}")
+    public String questionVote(Principal principal, @PathVariable("id") Integer id) {
+        Question question = this.questionService.getQuestion(id);
+        SiteUser siteUser = this.userService.getUser(principal.getName());
+
+        this.questionService.vote(question, siteUser);
+
+        return "redirect:/question/detail/%s".formatted(id);
     }
 }
